--- a/index.html
+++ b/index.html
@@ -46,14 +46,13 @@
     <style>
       /* Variables */
       :root {
-        --bg-cream: #FAFAE6;
-        --cta-burgundy: #800000;
-        --cta-burgundy-dark: #5a0000;
-        --gold-royal: #d4af37;
-        --text-brown: #3e2723;
-        --shadow-soft: rgba(0, 0, 0, 0.08);
+        --bg-cream: #FDF9F3;
+        --cta-burgundy: #7D1E18;
+        --cta-burgundy-dark: #5A120E;
+        --gold-royal: #B58941;
+        --text-brown: #2D1B17;
+        --shadow-soft: rgba(62, 39, 35, 0.12);
       }
-      
       /* Base Styles */
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body {
