--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <!-- Open Graph -->
     <meta property="og:title" content="يمن براند | مهد الفخامة العالمية" />
     <meta property="og:description" content="من أرض المنشأ، نُعيد هندسة الهوية اليمانية كأصلٍ سياديّ. قريباً.. إرث يُستعاد بمعايير المستقبل." />
-    <meta property="og:image" content="https://yemenbrand.com/share-image.jpeg" />
+    <meta property="og:image" content="https://yemenbrand.vercel.app/share-image.jpeg" />
     <meta property="og:url" content="https://yemenbrand.com" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Yemen Brand | The Cradle of Global Luxury" />
     <meta property="og:description" content="From the land of origin, we engineer Yemeni identity as a sovereign legacy. Coming soon.. a heritage restored with future standards." />
-    <meta property="og:image" content="https://yemenbrand.com/share-image.jpeg" />
+    <meta property="og:image" content="https://yemenbrand.vercel.app/share-image.jpeg" />
     <meta property="og:url" content="https://yemenbrand.com" />
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#800000" />
